<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:id="@+id/linearLayout3"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="50dp"
		android:orientation="vertical"
		app:layout_constraintBottom_toTopOf="@+id/ScannerOpenerButton"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<ScrollView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="24dp">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="20dp"
				android:layout_marginRight="20dp"
				android:orientation="vertical">

				<TextView
					android:id="@+id/textView12"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingTop="10dp"
					android:paddingBottom="10dp"
					android:text="@string/home_q1"
					android:textAppearance="@style/TextAppearance.AppCompat.Body1"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/textView13"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/home_a1" />

				<TextView
					android:id="@+id/textView14"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingTop="10dp"
					android:paddingBottom="10dp"
					android:text="@string/home_q2"
					android:textAppearance="@style/TextAppearance.AppCompat.Body1"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/textView15"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/home_a2" />

				<TextView
					android:id="@+id/textView18"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingTop="10dp"
					android:paddingBottom="10dp"
					android:text="@string/home_q4"
					android:textAppearance="@style/TextAppearance.AppCompat.Body1"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/textView19"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/home_a4" />

				<TextView
					android:id="@+id/textView20"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingTop="10dp"
					android:paddingBottom="10dp"
					android:text="@string/home_q5"
					android:textAppearance="@style/TextAppearance.AppCompat.Body1"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/textView21"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/home_a5" />
			</LinearLayout>
		</ScrollView>

	</LinearLayout>

	<Button
		android:id="@+id/ScannerOpenerButton"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="50dp"
		android:layout_marginStart="32dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="32dp"
		android:background="@color/baseColor"
		android:gravity="center"
		android:text="@string/open_scanner"
		android:textColor="#E4FFFFFF"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />


</androidx.constraintlayout.widget.ConstraintLayout>